fixed mobile overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,6 +27,10 @@
     }
 }
 
+html {
+    overflow-x: hidden;
+}
+
 html, body {
     margin: 0;
     padding: 0;
